Fix flickering of topbar when wrapped

--- a/wiki/src/about/staging/common.css
+++ b/wiki/src/about/staging/common.css
@@ -169,6 +169,7 @@ body.pt .donate .pt {
   font-family: "Source Sans Pro Regular", "DejaVu Sans", "Verdana", sans-serif;
   font-weight: bold;
   font-size: 13px;
+  border-bottom: 5px solid white;
 }
 
 .topbar a {
